prevent instagram embed from cutting truncated at small window sizes

--- a/wp-content/themes/sho_child/css/single.css
+++ b/wp-content/themes/sho_child/css/single.css
@@ -40,3 +40,10 @@ iframe{
     margin-top:20px;
     margin-bottom:20px;
 }
+
+@media only screen and (max-width: 767px) {
+    iframe{
+        height: 430px !important;
+    }
+}
+
